# hello_django

./: manage.py  pyproject.toml
hello_app/: views.py
hello_django/: asgi.py  settings.py  urls.py  wsgi.py
hello_django.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
