[tool.poetry]
name = "hello_django"
version = "0.1.0"
description = ""
authors = ["Lori Henderson <lorim95@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
django = "3.0.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
